Added Images and Fonts
Reviewed and revised basic HTML, commented in HTML, started CSS structure - adding comments and a few Basic CSS Styles.

--- a/css/main.css
+++ b/css/main.css
@@ -102,10 +102,76 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+    /* Site Colors ===
+
+    lt grey: #f6f7f9
+    Mint: #a2fdda
+    med grey: #e6e7e9
+    dk grey: #333333
+
+    ==================*/
+
+    /* Fonts
+    font-family: 'Work Sans', sans-serif;
+    font-family: 'Arvo', serif;
+
+    */
+
+
+/* ======================================================
+   Basic Style Setup 
+   ====================================================== */
+
+html {
+    box-sizing: border-box;
+    background-color: #eff7fa;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+img {
+    display: block; 
+    max-width: 100%;
+}
+
+body {
+    font-family: 'Work Sans', sans-serif;
+}
 
 
 
 
+/* ======================================================
+   Fixed Header 
+   ====================================================== */
+
+
+
+
+
+
+
+
+
+
+/* ======================================================
+   Fixed Left Bar
+   ====================================================== */
+
+
+
+
+
+
+
+
+
+
+/* ======================================================
+   Nav Open Styles 
+   ====================================================== */
 
 
 
