--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,9 @@ textarea {
 
     lt grey: #f6f7f9
     Mint: #a2fdda
-    med grey: #e6e7e9
+    med grey: #959595
     dk grey: #333333
+    black: 000
 
     ==================*/
 
@@ -139,8 +140,8 @@ img {
 body {
     font-family: 'Work Sans', sans-serif;
     font-size: .9em;
+    padding-top: 70px;
 }
-
 
 
 
@@ -175,6 +176,78 @@ body {
    Fixed Left Bar
    ====================================================== */
 
+#left-bar-social {
+    position: fixed;
+    top: 160px;
+    left: 45px;
+    z-index: 99;
+}
+
+.fb-icon {
+    background-image: url(../img/sf_fb-grey.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20px; 
+    height: 20px;
+}
+
+.fb-icon:hover {
+    background-image: url(../img/sf_fb_mint.png);
+}
+
+.tw-icon {
+    background-image: url(../img/sf_twitter-grey.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-bottom: 10px;
+    width: 20px; 
+    height: 20px;
+}
+
+.tw-icon:hover {
+        background-image: url(../img/sf_twitter_mint.png);
+}
+
+.insta-icon {
+    background-image: url(../img/sf_insta-grey.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-bottom: 10px;
+    width: 20px; 
+    height: 20px;
+}
+
+.insta-icon:hover {
+        background-image: url(../img/sf_insta_mint.png);
+}
+
+
+#left-bar-email {
+    position: fixed;
+    top: 675px;
+    left: -20px;
+    z-index: 98;
+    transform: rotate(-90deg);
+    font-size: .6em;
+    font-weight: 700;
+    letter-spacing: .25em;
+    text-transform: uppercase;
+}
+
+#left-bar-email a {
+    text-decoration: none;
+    color: #c9c9c9;
+}
+
+#left-bar-email a:hover {
+    color: #a2fdda;
+}
+
+/* ======================================================
+   Main Nav Styles 
+   ====================================================== */
+
+
 
 
 
@@ -185,14 +258,8 @@ body {
 
 
 /* ======================================================
-   Nav Open Styles 
+   Main Nav Open
    ====================================================== */
-
-
-
-
-
-
 
 
 
