Main Nav Styled

--- a/css/main.css
+++ b/css/main.css
@@ -162,8 +162,10 @@ body {
 }
 
 #header-logo {
+    position: relative;
     width: 200px;
     float: right;
+    z-index: 150;
 }
 
 #nav-icon {
@@ -247,15 +249,46 @@ body {
    Main Nav Styles 
    ====================================================== */
 
+#main-nav {
+    position: relative;
+    font-size: 3.2em;
+    font-weight: 300;
+    z-index: 125;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border: 1px solid green;
+}
 
+#main-nav ul {
+    list-style-type: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding-left: .75em;
+    margin-bottom: .3em;
+}
 
+#main-nav li {
+    margin-bottom: .5em;
+}
 
+#main-nav a {
+    text-decoration: none;
+    color: #000;
+}
 
+#main-nav a:hover {
+    color: #a2fdda;
+    font-weight: 400;
+    border-bottom: 3px #a2fdda solid;
+}
 
-
-
-
-
+#main-nav #nav-icon {
+    position: fixed;
+    top: .5em;
+    left: .75em;
+}
 
 /* ======================================================
    Main Nav Open
