--- a/css/main.css
+++ b/css/main.css
@@ -143,12 +143,27 @@ body {
     padding-top: 70px;
 }
 
+#page-content {
+    padding-left: 100px;
+}
+
+/* ======================================================
+   Logo in Top Right - Above all
+   ====================================================== */
+
+#header-logo {
+    position: fixed;
+    top: 22px;
+    Right: 35px;
+    width: 200px;
+    z-index: 200;
+}
+
 
 
 /* ======================================================
    Fixed Header 
    ====================================================== */
-
 
 #page-header {
     position: fixed;
@@ -161,16 +176,8 @@ body {
     z-index: 100;
 }
 
-#header-logo {
-    position: relative;
-    width: 200px;
-    float: right;
-    z-index: 150;
-}
-
 #nav-icon {
     width: 30px;
-    position: fixed;
 }
 
 
@@ -223,7 +230,6 @@ body {
         background-image: url(../img/sf_insta_mint.png);
 }
 
-
 #left-bar-email {
     position: fixed;
     top: 675px;
@@ -250,50 +256,61 @@ body {
    ====================================================== */
 
 #main-nav {
+    display: none;
     position: relative;
     font-size: 3.2em;
     font-weight: 300;
     z-index: 125;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    border: 1px solid green;
 }
 
-#main-nav ul {
-    list-style-type: none;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    padding-left: .75em;
-    margin-bottom: .3em;
-}
+    #main-nav ul {
+        list-style-type: none;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        padding-left: .66em;
+        margin-bottom: .28em;
+    }
 
-#main-nav li {
-    margin-bottom: .5em;
-}
+    #main-nav li {
+        margin-bottom: .5em;
+    }
 
 #main-nav a {
     text-decoration: none;
     color: #000;
 }
 
-#main-nav a:hover {
-    color: #a2fdda;
-    font-weight: 400;
-    border-bottom: 3px #a2fdda solid;
-}
+    #main-nav a:hover {
+        color: #a2fdda;
+        font-weight: 400;
+        border-bottom: 3px #a2fdda solid;
+    }
 
-#main-nav #nav-icon {
+#main-nav #close-icon {
+    width: 30px;
     position: fixed;
     top: .5em;
-    left: .75em;
+    left: .68em;
 }
 
 /* ======================================================
    Main Nav Open
    ====================================================== */
 
+.nav-open {
+    overflow: hidden;
+}
+
+    .nav-open #main-nav {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        min-height: 100%;
+        background-color: #fff;
+    }
 
 
 
