--- a/css/main.css
+++ b/css/main.css
@@ -140,11 +140,38 @@ img {
 body {
     font-family: 'Work Sans', sans-serif;
     font-size: .9em;
-    padding-top: 70px;
+    font-weight: 400;
 }
 
 #page-content {
     padding-left: 100px;
+}
+
+h2 {
+    font-weight: 600;
+    font-size: 2.5em;
+    margin: .65em 0;
+}
+
+h3 {
+    font-weight: 500;
+    font-size: .75em;
+    text-transform: uppercase;
+    letter-spacing: .25em;
+    margin: .75em 0;
+}
+
+    .h3-border {
+        padding-bottom: .25em;
+        border-bottom: 1px solid #000;
+    }
+
+p {
+    margin: .75em 0;
+}
+
+.section {
+    padding: 100px;
 }
 
 /* ======================================================
@@ -311,6 +338,56 @@ body {
         min-height: 100%;
         background-color: #fff;
     }
+
+
+
+/* ======================================================
+   Paint Box Frame - used on other pages
+   ====================================================== */
+
+.paint-box-frame {
+    width: 50%;
+    background-image: url(../img/sf-paint-swash.png);
+    background-repeat: no-repeat;
+    background-size: 1400px;
+    background-position: right -100px top -335px;
+    overflow: hidden;
+}
+
+.paint-box-frame-content {
+    background-color: #eff7fa;
+    padding: 3em 6em 3em 3em;
+    margin: 1em;
+}
+
+
+
+
+
+
+
+
+
+
+/* ======================================================
+   Hero Section
+   ====================================================== */
+
+.hero {
+    position: relative;
+    height: 650px;
+    padding: 70px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
