--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,12 @@ p {
     width: 50%;
 }
 
+.float-1-4-box {
+    padding: 3em;
+    float: left;
+    width: 25%;
+}
+
 .float-1-3-box {
     padding: 3em;
     float: left;
@@ -573,15 +579,29 @@ figcaption {
    Footer Section
    ====================================================== */
 
-.page-footer .float-1-2-box {
+.page-footer .float-1-4-box {
     width: 25%;
     float: left;
     margin: 0;
-    padding: 0;
+    padding: 0 30px 0 0;
 }
 
 
+.mint-hover-img {
+    float: left;
+    width: 30%;
+    margin: 0 10px 10px 0;
+}
 
+    .mint-hover-img img {
+        width: 100%;
+        position: relative;
+        z-index: -1;
+    }
+
+    .mint-hover-img:hover {
+        background-color: hsla(167, 100%, 50%, 0.53);
+    }
 
 
 
