--- a/css/main.css
+++ b/css/main.css
@@ -140,14 +140,16 @@ img {
 
 body {
     font-family: 'Work Sans', sans-serif;
-    font-size: .9em;
+    font-size: .8em;
     font-weight: 400;
+    line-height: 2em;
 }
 
 h2 {
     font-weight: 600;
-    font-size: 2.5em;
+    font-size: 2.75em;
     margin: .65em 0;
+    line-height: 1.4em;
 }
 
 h3 {
@@ -155,27 +157,27 @@ h3 {
     font-size: .75em;
     text-transform: uppercase;
     letter-spacing: .25em;
-    margin: .75em 0;
+    margin: 1em 0;
 }
 
     .h3-border {
-        padding-bottom: .25em;
+        padding-bottom: .5em;
         border-bottom: 1px solid #000;
     }
 
-p {
-    margin: .75em 0;
-}
 
 .button {
+    display: inline-block;
     text-decoration: none;
     border: 1px solid #000;
     text-transform: uppercase;
-    padding: 1.25em 3.5em;
+    padding: 1.35em 3em;
     color: #000;
     font-size: .5em;
     letter-spacing: .25em;
     font-weight: 500;
+    margin-top: 20px;
+    line-height: 1em;
 }
 
     .button:hover {
@@ -184,7 +186,7 @@ p {
     }
 
 .float-1-2-box {
-    padding: 3em;
+    padding-right: 60px;
     float: left;
     width: 50%;
 }
@@ -206,10 +208,21 @@ figcaption {
 }
 
 .page-section {
-    padding: 50px 100px;
+    padding: 200px 0;
+    width: 80%;
     max-width: 1775px;
-    margin: auto;
+    margin: 0 auto;
 }
+
+.dot-divider {
+    background-image: url(../img/sf-paint-dots-p-500.png);
+    background-repeat: repeat-x;
+    background-size: contain;
+    height: 25px;
+    margin-bottom: 15px;
+    width: 1000px;
+}
+
 
 /* ======================================================
    Logo in Top Right - Above all
