--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,11 @@ h3 {
 
 figcaption {
     text-align: center;
+    text-transform: uppercase;
+    font-size: .85em;
+    padding-top: 1em;
+    font-weight: 600;
+    letter-spacing: .25em;
 }
 
 .page-section {
@@ -499,17 +504,20 @@ figcaption {
 .service-icons {
     width: 50%;
     float: left;
+    padding: 60px 60px 60px 0;
+    max-width: 650px;
+    margin: 0 auto;
 }
 
     .service-icons figure {
-        width: 20%;
+        width: 33%;
         float: left;
-        padding-right: 10%;
+        padding-left: 10%;
         margin: 0;
     }
 
     .service-icons img {
-        width: 75%;
+        width: 100px;
         margin: 0 auto;
     }
 
