Finally! fixed the hero section. Also working on fixing the side margin issues

--- a/css/main.css
+++ b/css/main.css
@@ -214,24 +214,24 @@ figcaption {
 .page-section {
     padding: 200px 0;
     width: 80%;
-    max-width: 1775px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .page-section-less-padding {
     padding: 100px 0;
     width: 80%;
-    max-width: 1775px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .dot-divider {
     background-image: url(../img/sf-paint-dots-p-500.png);
     background-repeat: repeat-x;
-    background-size: contain;
-    height: 25px;
+    background-size: auto 25px;
+    height: 30px;
     margin-bottom: 15px;
-    width: 1000px;
+    width: 100%;
 }
 
 
@@ -242,7 +242,7 @@ figcaption {
 .sf-logo {
     position: fixed;
     top: 22px;
-    Right: 35px;
+    right: 2.5%;
     width: 200px;
     z-index: 200;
 }
@@ -260,7 +260,7 @@ figcaption {
     width: 100%;
     background-color: #fff;
     height: 72px;
-    padding: 22px 35px 0 35px;
+    padding: 22px 2.5% 0 2.5%;
     z-index: 100;
 }
 
@@ -349,6 +349,7 @@ figcaption {
     font-size: 3.2em;
     font-weight: 300;
     z-index: 125;
+    padding-left: 2.5%;
 }
 
     #main-nav ul {
@@ -356,12 +357,11 @@ figcaption {
         position: fixed;
         bottom: 0;
         left: 0;
-        padding-left: .66em;
-        margin-bottom: .28em;
+        margin-bottom: 0;
     }
 
     #main-nav li {
-        margin-bottom: .5em;
+        margin-bottom: 1.5em;
     }
 
 #main-nav a {
@@ -379,7 +379,7 @@ figcaption {
     width: 30px;
     position: fixed;
     top: .5em;
-    left: .68em;
+    left: 2.5%;
 }
 
 /* ======================================================
@@ -414,28 +414,34 @@ figcaption {
     position: relative;
     min-height: 650px;
     overflow: hidden;
+    width: 100%;
+    margin-top: 70px;
 }
 
-    .hero .hero-img {
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-
-    .hero-img {
-        height: 100%;
-    }
+.hero-img {
+    background-image: url(../img/sf-creating-confident-brands-hero.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 50%;
+    height: 650px;
+    width: 65%;
+    position: absolute;
+    bottom: 0;
+    right: -100px;
+}
 
     .hero .paint-box-frame {
         position: absolute;
-        margin: 100px 10%;
+        top: 50%;
+        right: 53%;
+        transform: translate(0, -30%);
     }
 
 .decorative-line {
     position: absolute;
     height: 1px;
     width: 30%;
-    left: 0;
+    left: 8%;
     bottom: 0;
     border-bottom: 1px solid black;
 }
@@ -446,15 +452,15 @@ figcaption {
     background-image: url(../img/sf-paint-swash.png);
     background-repeat: no-repeat;
     background-size: 1400px;
-    background-position: right -100px top -335px;
+    background-position: 50% 50%;
     overflow: hidden;
     z-index: -1;
 }
 
     .paint-box-text {
         background-color: #f8f9fc;
-        padding: 50px 30% 50px 50px;
-        margin: 1em;
+        padding: 30px 100px 50px 50px;
+        margin: 1.3em;
     }
 
 
