adjusting spacing on the site

--- a/css/main.css
+++ b/css/main.css
@@ -186,9 +186,9 @@ h3 {
     }
 
 .float-1-2-box {
-    padding-left: 60px;
     float: left;
     width: 50%;
+    padding-left: 50px;
 }
 
 .float-1-4-box {
@@ -213,14 +213,15 @@ figcaption {
 
 .page-section {
     padding: 200px 0;
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
     overflow: hidden;
+    max-width: 1500px;
 }
 
 .page-section-less-padding {
     padding: 100px 0;
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -233,7 +234,6 @@ figcaption {
     margin-bottom: 15px;
     width: 100%;
 }
-
 
 /* ======================================================
    Logo in Top Right - Above all
@@ -484,24 +484,38 @@ figcaption {
         color: #000;
     }
 
+    .case-study p {
+        font-size: 2.5em;
+        line-height: 1.5em;
+        font-weight: 600;
+    }
+
 .link-box {
     position: absolute;
     top: 50%;
-    right: 58%;
+    right: 64%;
     transform: translate(0,-50%);
     background-color: #fff;
     border-bottom: 15px solid #000;
-    padding: 4em 4.5em 4em 4.5em;
-    width: 30%;
+    padding: 3em 3em 3em 4em;
+    width: 28%;
 }
 
 .link-box:hover {
     border-bottom: 15px solid #a2fdda;
 }
 
+.case-study .arrow-button {
+    border-color: #000;
+}
 
+.case-study .arrowstem {
+    border-color: #000;
+}
 
-
+.case-study .arrowstem:after {
+    border-color: #000;
+}
 
 /* ======================================================
    Our Services Section
@@ -554,7 +568,7 @@ figcaption {
     position: relative;
     display: flex;
     height: 550px;
-    background-color: hsla(182, 1%, 5%, 0.42);
+    background-color: hsla(245, 0%, 15%, 0.8);
 }
 
     .project-desc {
@@ -571,16 +585,16 @@ figcaption {
     }
 
     .project:hover {
-        color: #000;
-        background-color: hsla(167, 100%, 50%, 0.53);
+        color: #333333;
+        background-color: hsla(167, 100%, 82%, 0.75);
     }
 
     .project .h3-border {
-        border-color: #fff;
+        border-color: #333333;
     }
 
     .project:hover .h3-border {
-        border-color: #000;
+        border-color: #333333;
     }
 
     .project-desc h2 {
@@ -602,7 +616,7 @@ figcaption {
     width: 100%;
     color: #fff;
     height: 335px;
-    padding: 50px 150px;
+    padding: 50px 100px;
     margin: 100px auto;
 }
 
@@ -627,7 +641,7 @@ figcaption {
 
     .right-chevron {
         position: absolute;
-        right: 10%;
+        right: 5%;
         top: 45%;
         content: '';
         display: block;
