--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,7 @@ h3 {
     font-weight: 500;
     margin-top: 20px;
     line-height: 1em;
+    transition: all .25s ease;
 }
 
     .button:hover {
