--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,7 @@ h3 {
     font-weight: 500;
     margin-top: 20px;
     line-height: 1em;
-    transition: all .25s ease;
+    transition: all 300ms ease;
 }
 
     .button:hover {
@@ -500,6 +500,7 @@ figcaption {
     border-bottom: 15px solid #000;
     padding: 3em 3em 3em 4em;
     width: 28%;
+    transition: all 300ms ease;
 }
 
 .link-box:hover {
@@ -570,6 +571,7 @@ figcaption {
     display: flex;
     height: 550px;
     background-color: hsla(245, 0%, 15%, 0.8);
+    transition: all 300ms ease;
 }
 
     .project-desc {
