--- a/css/main.css
+++ b/css/main.css
@@ -387,19 +387,15 @@ figcaption {
    Main Nav Open
    ====================================================== */
 
-.nav-open {
-    overflow: hidden;
+.nav-open #main-nav {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    background-color: #fff;
 }
-
-    .nav-open #main-nav {
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        min-height: 100%;
-        background-color: #fff;
-    }
 
 
 /* ======================================================
