--- a/css/main.css
+++ b/css/main.css
@@ -152,19 +152,15 @@ h2 {
     line-height: 1.4em;
 }
 
-h3 {
+.small-header{
     font-weight: 500;
-    font-size: .75em;
+    font-size: 7pt;
     text-transform: uppercase;
     letter-spacing: .25em;
     margin: 1em 0;
+    padding-bottom: .5em;
+    border-bottom: 1px solid #000;
 }
-
-    .h3-border {
-        padding-bottom: .5em;
-        border-bottom: 1px solid #000;
-    }
-
 
 .button {
     display: inline-block;
@@ -503,17 +499,13 @@ figcaption {
     border-bottom: 15px solid #a2fdda;
 }
 
-.case-study .arrow-button {
-    border-color: #000;
-}
-
-.case-study .arrowstem {
-    border-color: #000;
-}
-
+.case-study .arrow-button,
+.case-study .arrowstem,
 .case-study .arrowstem:after {
     border-color: #000;
 }
+
+
 
 /* ======================================================
    Our Services Section
@@ -588,11 +580,11 @@ figcaption {
         background-color: hsla(167, 100%, 82%, 0.75);
     }
 
-    .project .h3-border {
-        border-color: #333333;
+    .project .small-header {
+        border-color: #fff;
     }
 
-    .project:hover .h3-border {
+    .project:hover .small-header {
         border-color: #333333;
     }
 
@@ -600,6 +592,11 @@ figcaption {
         font-size: 2em;
     }
 
+    .project:hover .arrow-button,
+    .project:hover .arrow-button .arrowstem,
+    .project:hover .arrow-button .arrowstem:after {
+        border-color: #333;
+    }
 
 
 /* ======================================================
@@ -625,7 +622,7 @@ figcaption {
         line-height: 1.6em;
     }
 
-    .reviews .h3-border {
+    .reviews .small-header {
         border-color: #fff;
     }
 
@@ -735,7 +732,7 @@ padding: 10px 0px 18px 10px;
         height: 0;
         width: 0;
         display: block;
-        border-bottom: 0.1rem solid #fff;
+        border-bottom: 0.09rem solid #fff;
         height: 7px;
         width: 26px;
     }
@@ -743,22 +740,20 @@ padding: 10px 0px 18px 10px;
     .arrowstem:after {
         content: '';
         display: block;
-        border-top: 0.15rem solid #fff;
-        border-right: 0.15rem solid #fff;
+        border-top: 0.09rem solid #fff;
+        border-right: 0.09rem solid #fff;
         height: 14px;
         width: 14px;
         transform: rotate(45deg);
         position: absolute;
-        top: 0;
-        left: 10px;
+        top: 0px;
+        left: 11px;
     }
 
-    .arrow-button:hover {
-        border-color: #000;
-        background-color: #fff;
-    }
+.arrow-button:hover {
+    background-color: #fff;
 
-
+}
 
 
 
