--- a/css/main.css
+++ b/css/main.css
@@ -109,15 +109,6 @@ textarea {
     Mint: #a2fdda
     med grey: #959595
     dk grey: #333333
-    black: 000
-
-    ==================*/
-
-    /* Fonts
-    font-family: 'Work Sans', sans-serif;
-    font-family: 'Arvo', serif;
-
-    */
 
 
 /* ======================================================
@@ -145,12 +136,15 @@ body {
     line-height: 2em;
 }
 
-h2 {
+h2, h3, h4, h5, h6 {
     font-weight: 600;
-    font-size: 2.75em;
-    margin: .65em 0;
     line-height: 1.4em;
 }
+
+    h2 {
+        font-size: 2.75em;
+        margin: .65em 0;
+    }
 
 .small-header{
     font-weight: 500;
@@ -174,7 +168,7 @@ h2 {
     font-weight: 500;
     margin-top: 20px;
     line-height: 1em;
-    transition: all 300ms ease;
+    transition: all 250ms ease;
 }
 
     .button:hover {
@@ -185,7 +179,7 @@ h2 {
 .float-1-2-box {
     float: left;
     width: 50%;
-    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .float-1-4-box {
@@ -213,7 +207,6 @@ figcaption {
     width: 85%;
     margin: 0 auto;
     overflow: hidden;
-    max-width: 1500px;
 }
 
 .page-section-less-padding {
@@ -267,7 +260,7 @@ figcaption {
 
 
 /* ======================================================
-   Fixed Left Bar
+   Fixed Left Bar / social media icons
    ====================================================== */
 
 #left-bar-social {
@@ -277,7 +270,7 @@ figcaption {
     z-index: 99;
 }
 
-.fb-icon {
+.fb-icon-grey {
     background-image: url(../img/sf_fb-grey.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -285,11 +278,11 @@ figcaption {
     height: 20px;
 }
 
-.fb-icon:hover {
-    background-image: url(../img/sf_fb_mint.png);
-}
+    .fb-icon-grey:hover {
+        background-image: url(../img/sf_fb_mint.png);
+    }
 
-.tw-icon {
+.tw-icon-grey {
     background-image: url(../img/sf_twitter-grey.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -298,11 +291,11 @@ figcaption {
     height: 20px;
 }
 
-.tw-icon:hover {
-        background-image: url(../img/sf_twitter_mint.png);
-}
+    .tw-icon-grey:hover {
+            background-image: url(../img/sf_twitter_mint.png);
+    }
 
-.insta-icon {
+.insta-icon-grey {
     background-image: url(../img/sf_insta-grey.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -311,13 +304,13 @@ figcaption {
     height: 20px;
 }
 
-.insta-icon:hover {
-        background-image: url(../img/sf_insta_mint.png);
-}
+    .insta-icon-grey:hover {
+            background-image: url(../img/sf_insta_mint.png);
+    }
 
 #left-bar-email {
     position: fixed;
-    top: 675px;
+    top: 670px;
     left: -20px;
     z-index: 98;
     transform: rotate(-90deg);
@@ -327,14 +320,14 @@ figcaption {
     text-transform: uppercase;
 }
 
-#left-bar-email a {
-    text-decoration: none;
-    color: #c9c9c9;
-}
+    #left-bar-email a {
+        text-decoration: none;
+        color: #c9c9c9;
+    }
 
-#left-bar-email a:hover {
-    color: #a2fdda;
-}
+    #left-bar-email a:hover {
+        color: #a2fdda;
+    }
 
 /* ======================================================
    Main Nav Styles 
@@ -361,23 +354,17 @@ figcaption {
         margin-bottom: 1.5em;
     }
 
-#main-nav a {
-    text-decoration: none;
-    color: #000;
-}
-
-    #main-nav a:hover {
-        color: #a2fdda;
-        font-weight: 400;
-        border-bottom: 3px #a2fdda solid;
+    #main-nav a {
+        text-decoration: none;
+        color: #000;
     }
 
-#main-nav #close-icon {
-    width: 30px;
-    position: fixed;
-    top: .5em;
-    left: 2.5%;
-}
+        #main-nav a:hover {
+            color: #a2fdda;
+            font-weight: 400;
+            border-bottom: 3px #a2fdda solid;
+        }
+
 
 /* ======================================================
    Main Nav Open
@@ -393,6 +380,12 @@ figcaption {
     background-color: #fff;
 }
 
+#main-nav #close-icon {
+    width: 30px;
+    position: fixed;
+    top: .5em;
+    left: 2.5%;
+}
 
 /* ======================================================
    Hero Section
@@ -411,6 +404,12 @@ figcaption {
     margin-top: 70px;
 }
 
+.hero .paint-box-frame {
+    position: absolute;
+    top: 160px;
+    right: 52%;
+}
+
 .hero-img {
     background-image: url(../img/sf-creating-confident-brands-hero.png);
     background-repeat: no-repeat;
@@ -422,13 +421,6 @@ figcaption {
     bottom: 0;
     right: -100px;
 }
-
-    .hero .paint-box-frame {
-        position: absolute;
-        top: 50%;
-        right: 53%;
-        transform: translate(0, -30%);
-    }
 
 .decorative-line {
     position: absolute;
@@ -471,41 +463,74 @@ figcaption {
     background-size: cover;
     min-height: 575px;
     overflow: hidden;
+    padding: 5% 0 5% 8%;
 }
 
     .case-study a {
         color: #000;
+        text-decoration: none;
     }
 
-    .case-study p {
-        font-size: 2.5em;
-        line-height: 1.5em;
-        font-weight: 600;
+    .case-study .arrow-button,
+    .case-study .arrowstem,
+    .case-study .arrowstem:after {
+        border-color: #000;
     }
+
 
 .link-box {
-    position: absolute;
-    top: 50%;
-    right: 64%;
-    transform: translate(0,-50%);
     background-color: #fff;
     border-bottom: 15px solid #000;
-    padding: 3em 3em 3em 4em;
-    width: 28%;
-    transition: all 300ms ease;
+    padding: 2em 3.5em 3em 4em;
+    width: 32%;
+    margin: 3em 0;
+    transition: all 250ms ease;
 }
 
-.link-box:hover {
-    border-bottom: 15px solid #a2fdda;
-}
+    .link-box:hover {
+        border-bottom: 15px solid #a2fdda;
+    }
 
-.case-study .arrow-button,
-.case-study .arrowstem,
-.case-study .arrowstem:after {
-    border-color: #000;
-}
+    .link-box p {
+        font-size: 2.5em;
+        line-height: 1.35em;
+        font-weight: 600;
+        margin: 0 0 1em 0;
+    }
 
+    .link-box:hover .arrow-button {
+        width: 110px;
+        transition: all 250ms ease;
+    }
 
+    .link-box:hover .arrow {
+        width: 85px;
+        transition: all 250ms ease;
+    }
+
+    .link-box:hover .arrow:after {
+        position: absolute;
+        top: 0px;
+        left: 70px;
+        transition: all 250ms ease;
+    }
+
+    .link-box .arrow-button:hover {
+        background-color: #a2fdda;
+        border-color: #a2fdda;
+        transition: all 250ms ease;
+    }
+
+    .link-box .arrow-button:hover .arrow {
+        border-color: #fff;
+        transition: all 250ms ease;
+    }
+
+    .link-box .arrow-button:hover .arrow:after {
+        border-color: #fff;
+        left: 100px;
+        transition: all 250ms ease;
+    }
 
 /* ======================================================
    Our Services Section
@@ -532,8 +557,6 @@ figcaption {
     }
 
 
-
-
 /* ======================================================
    Project Section
 
@@ -541,12 +564,15 @@ figcaption {
    ====================================================== */
 
 .portfolio {
+    width: 85%;
     padding-top: 0;
     padding-bottom: 0;
+    margin: 0 auto;
 }
 
 .col-flex-3 {
     max-width: 1500px;
+    margin: 0 auto;
     display: flex;
 }
 
@@ -559,7 +585,7 @@ figcaption {
     display: flex;
     height: 550px;
     background-color: hsla(245, 0%, 15%, 0.8);
-    transition: all 300ms ease;
+    transition: all 250ms ease;
 }
 
     .project-desc {
@@ -592,12 +618,21 @@ figcaption {
         font-size: 2em;
     }
 
+    .project .arrow-button,
+    .project .arrow-button .arrow,
+    .project .arrow-button .arrow:after {
+        border-color: #fff;
+    }
+
     .project:hover .arrow-button,
-    .project:hover .arrow-button .arrowstem,
-    .project:hover .arrow-button .arrowstem:after {
+    .project:hover .arrow-button .arrow,
+    .project:hover .arrow-button .arrow:after {
         border-color: #333;
     }
 
+    .project .arrow-button:hover {
+        background-color: #fff;
+    }
 
 /* ======================================================
    Reviews Section
@@ -612,7 +647,7 @@ figcaption {
     width: 100%;
     color: #fff;
     height: 335px;
-    padding: 50px 100px;
+    padding: 3% 7%;
     margin: 100px auto;
 }
 
@@ -620,6 +655,7 @@ figcaption {
         font-size: 2em;
         font-weight: 500;
         line-height: 1.6em;
+        margin: 1.5em 1em .75em 0;
     }
 
     .reviews .small-header {
@@ -649,20 +685,19 @@ figcaption {
     }
 
 /* ======================================================
-   Social Icons Section
+   Social Icons Section above footer
    ====================================================== */
 
 .social-icons {
     position: relative;
-    width: 80%;
-    max-width: 1775px;
+    width: 85%;
     margin: auto;
-    padding: 0px 50px 75px 0;
+    padding: 0px 50px 10px 0;
     border-bottom: 1px solid #000;
 }
 
 img.footer-logo {
-    width: 200px;
+    width: 225px;
     float: left;
 }
 
@@ -691,8 +726,7 @@ img.footer-logo {
    ====================================================== */
 
 .page-footer {
-    width: 80%;
-    max-width: 1775px;
+    width: 85%;
     margin: 0 auto;
 }
 
@@ -720,43 +754,35 @@ img.footer-logo {
    ====================================================== */
 
 .arrow-button {
-display: block;
-width: 50px;
-border: 1px solid #fff;
-padding: 10px 0px 18px 10px;
+    display: block;
+    width: 45px;
+    border: 1px solid #000;
+    padding: 10px 0px 15px 10px;
 }
 
-    .arrowstem {
+    .arrow {
         position: relative;
         content: '';
         height: 0;
         width: 0;
         display: block;
-        border-bottom: 0.09rem solid #fff;
+        border-bottom: 0.09rem solid #000;
         height: 7px;
-        width: 26px;
+        width: 22px;
     }
 
-    .arrowstem:after {
+    .arrow:after {
         content: '';
         display: block;
-        border-top: 0.09rem solid #fff;
-        border-right: 0.09rem solid #fff;
+        border-top: 0.09rem solid #000;
+        border-right: 0.09rem solid #000;
         height: 14px;
         width: 14px;
         transform: rotate(45deg);
         position: absolute;
         top: 0px;
-        left: 11px;
+        left: 7px;
     }
-
-.arrow-button:hover {
-    background-color: #fff;
-
-}
-
-
-
 
 
  /* ==========================================================================
